buildlog.txt
/tmp/java_pxF6Wc/SombraPanel.java:31: error: class, interface, or enum expected
	public static void main(String[] args)
	              ^
/tmp/java_pxF6Wc/SombraPanel.java:34: error: class, interface, or enum expected
      	f.setUndecorated(true);
      	^
/tmp/java_pxF6Wc/SombraPanel.java:35: error: class, interface, or enum expected
      	f.setExtendedState(JFrame.MAXIMIZED_BOTH);
      	^
/tmp/java_pxF6Wc/SombraPanel.java:36: error: class, interface, or enum expected
      	f.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
      	^
/tmp/java_pxF6Wc/SombraPanel.java:37: error: class, interface, or enum expected
      	f.setVisible(true);
      	^
/tmp/java_pxF6Wc/SombraPanel.java:38: error: class, interface, or enum expected
      	f.add(new SombraPanel());
      	^
/tmp/java_pxF6Wc/SombraPanel.java:39: error: class, interface, or enum expected
    }
    ^
/tmp/java_pxF6Wc/Sombra.java:12: error: reached end of file while parsing
{
 ^
8 errors

